--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,24 @@ body {
     margin: 0;
     font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
+.auth-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    mat-form-field {
+        min-width: 30%;
+        max-width: 400px;
+    }
+    .button-container {
+        display: flex;
+        flex-direction: column;
+
+        button {
+            margin: 5px 0;
+        }
+    }
+}
