--- a/src/app/shared/components/side-menu/side-menu.component.html
+++ b/src/app/shared/components/side-menu/side-menu.component.html
@@ -1,6 +1,14 @@
-<app-side-menu-main></app-side-menu-main>
-<div
-    *ngIf="isMobileViewAndOpenedSidePanel$ | async"
-    (click)="close()"
-    class="blurred"
-></div>
+<div class="wrapper"
+[ngClass]="{
+'mobile': isMobileViewAndOpenedSidePanel$ | async
+}"
+>
+    <app-side-menu-main></app-side-menu-main>
+    <div
+        *ngIf="isMobileViewAndOpenedSidePanel$ | async"
+        (click)="close()"
+        class="blurred"
+    ></div>
+</div>
+
+
