update side panel css

--- a/src/app/shared/components/side-menu/side-menu.component.html
+++ b/src/app/shared/components/side-menu/side-menu.component.html
@@ -1,7 +1,8 @@
-<div class="wrapper"
-[ngClass]="{
-'mobile': isMobileViewAndOpenedSidePanel$ | async
-}"
+<div
+    class="wrapper"
+    [ngClass]="{
+        mobile: isMobileViewAndOpenedSidePanel$ | async
+    }"
 >
     <app-side-menu-main></app-side-menu-main>
     <div
@@ -10,5 +11,3 @@
         class="blurred"
     ></div>
 </div>
-
-
