--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,5 +1,9 @@
 <div class="wrapper">
     <app-side-menu></app-side-menu>
-    <p>home works! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem deleniti ex, impedit incidunt laudantium mollitia nam numquam quidem saepe vero. Architecto dolorem et ex laudantium pariatur perspiciatis, repudiandae suscipit voluptatum?</p>
+    <p>
+        home works! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Autem deleniti ex, impedit incidunt laudantium mollitia nam numquam
+        quidem saepe vero. Architecto dolorem et ex laudantium pariatur
+        perspiciatis, repudiandae suscipit voluptatum?
+    </p>
 </div>
-
